--- a/BatchAddingParameters/WindowHelp.xaml
+++ b/BatchAddingParameters/WindowHelp.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:BatchAddingParameters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Title="Справка" Width="500" Height="400"
+             Title="Справка" Width="550" Height="450"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,7 +25,10 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Label Content="Описание работы программного модуля" Grid.Row="1" Grid.Column="1" FontSize="14" Grid.ColumnSpan="3" HorizontalContentAlignment="Center"/>
-        <TextBlock Text="Описание работы..." FontSize="12" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3"/>
-        <Button x:Name="buttonOk" Content="OK" Click="buttonClick" Width="150" Height="40" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Right" Background="BlanchedAlmond"/>
+        <TextBox x:Name="textBox" Text="Описание работы..." 
+                   FontSize="12" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3"
+                 Height="280" TextWrapping="Wrap" BorderThickness="0"/>
+        <Button x:Name="buttonOk" Content="OK" Click="buttonClick" Width="150" Height="40" 
+                Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Right" Background="BlanchedAlmond"/>
     </Grid>
 </Window>
