--- a/BatchAddingParameters/WindowMain.xaml
+++ b/BatchAddingParameters/WindowMain.xaml
@@ -5,13 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BatchAddingParameters"
              mc:Ignorable="d"
-             Title="Добавление общих параметров в семейства" Height="800" Width="700"
+             Title="Добавление общих параметров в семейства" Height="698.667" Width="665.333"
              Background="SteelBlue" FontFamily="Segoe UI Light">
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="85"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="30"/>
@@ -32,7 +32,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        
+
         <TextBlock Text="Параметры" FontSize="16" TextAlignment="Center" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
         <Button x:Name="buttonHelp" Click="onButtonHelpClick" Content="?" Grid.Column="4" Grid.Row="1" Background="Transparent" FontSize="12" Foreground="Snow" BorderThickness="0">
             <Button.Resources>
@@ -41,16 +41,17 @@
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="buttonChangeParametersList" Click="buttonChangeParametersList_Click" Content=" +/- " FontSize="12" HorizontalAlignment="Left"
-                Grid.Column="3" Grid.Row="1" Margin="0,5,0,5" Background="LightGoldenrodYellow">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5" />
-                </Style>
-            </Button.Resources>
+        <Button x:Name="buttonChangeParametersList" Click="buttonChangeParametersList_Click" 
+                HorizontalAlignment="Left" Height="80" Width="80" VerticalAlignment="Top"
+                Grid.Column="1" Grid.Row="2" Margin="0,0,0,5" Background="LightGoldenrodYellow">
+            <StackPanel Orientation="Vertical">
+                <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\plus-icon.png" />
+                <TextBlock Text="Добавить" Background="Transparent" Margin="0,2,0,0" HorizontalAlignment="Center"/>
+                <TextBlock Text="или удалить" Background="Transparent" />
+            </StackPanel>
         </Button>
-        
-        <ListView x:Name="listViewParameters" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" Height="180">
+
+        <ListView x:Name="listViewParameters" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="200">
             <ListView.View>
                 <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Parameter Info">
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Id}" Width="20"/>
@@ -64,23 +65,50 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        
+
         <TextBlock Text="Семейства" FontSize="16" TextAlignment="Center" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
 
-        <ComboBox x:Name="comboBoxStartFolder" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4" AllowDrop="True" Margin="0,5,0,5">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Path=StartFolder}" />
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
+        <StackPanel Grid.Row="7" Grid.Column="1">
+            <Button Width="80" Height="80" Margin="0,0,0,5" Background="LightYellow" HorizontalAlignment="Left" Click="UserFolder_ButtonClick">
+                <StackPanel Orientation="Vertical">
+                    <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\user-icon.png" />
+                    <TextBlock Text="User" Background="Transparent" Margin="0,2,0,0"/>
+                </StackPanel>
+            </Button>
+            <Button Width="80" Height="80" Margin="0,0,0,5" Background="LightYellow" HorizontalAlignment="Left" Click="NetFolder_ButtonClick">
+                <StackPanel Orientation="Vertical">
+                    <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\net-icon.png" />
+                    <TextBlock Text="М1 Проект" Background="Transparent" Margin="0,2,0,0"/>
+                </StackPanel>
+            </Button>
+            <Button Width="80" Height="80" Background="LightYellow" HorizontalAlignment="Left" Click="AllFolders_ButtonClick">
+                <StackPanel Orientation="Vertical">
+                    <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\comp-icon.png" />
+                    <TextBlock Text="Этот" Background="Transparent" TextAlignment="Center" Margin="0,2,0,0"/>
+                    <TextBlock Text="компьютер" Background="Transparent" TextAlignment="Center"/>
+                </StackPanel>
+            </Button>
 
-        <TreeView x:Name="folderTree" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="4" 
-                  Height="200">
+
+        </StackPanel>
+        <TreeView x:Name="FolderView"  Grid.Row="7" Grid.Column="3"  Height="250" Grid.ColumnSpan="2">
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type local:FolderTreeNodeItem}" ItemsSource="{Binding Path=SubNode}">
-                    <TreeViewItem Header="{Binding Path=Node}" />
-                </HierarchicalDataTemplate>
+                <Style TargetType="{x:Type TreeViewItem}" >
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Width="15" Margin="3" 
+                                           Source="{Binding 
+                                        RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}}, 
+                                        Path=Tag, 
+                                        Converter={x:Static local:HeaderToImageConverter.Instance}}" />
+                                    <TextBlock VerticalAlignment="Center" Text="{Binding}" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
             </TreeView.Resources>
         </TreeView>
         <Button Content="Удалить параметры из семейств" FontSize="14" HorizontalAlignment="Left" 
@@ -102,13 +130,13 @@
             </Button.Resources>
         </Button>
         <TextBlock Text="Отчет" FontSize="16" TextAlignment="Center" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
-        
+
         <TextBlock Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4"
                    Margin="0,5,0,5" Foreground="LightGoldenrodYellow"
-                   Height="150"
+                   Height="50"
                    Text="Text..">
         </TextBlock>
-        
+
 
     </Grid>
 </Window>
