--- a/BatchAddingParameters/WindowMain.xaml
+++ b/BatchAddingParameters/WindowMain.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BatchAddingParameters"
              mc:Ignorable="d"
-             Title="Добавление общих параметров в семейства" Height="698.667" Width="665.333"
+             Title="Добавление общих параметров в семейства" Height="655.333" Width="665.333"
              Background="SteelBlue" FontFamily="Segoe UI Light">
 
     <Grid>
@@ -34,56 +34,84 @@
         </Grid.RowDefinitions>
 
         <TextBlock Text="Параметры" FontSize="16" TextAlignment="Center" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
-        <Button x:Name="buttonHelp" Click="onButtonHelpClick" Content="?" Grid.Column="4" Grid.Row="1" Background="Transparent" FontSize="12" Foreground="Snow" BorderThickness="0">
+        <Button Grid.Column="4" Grid.Row="1" Background="Transparent" Foreground="Snow"  BorderThickness="0"
+                x:Name="buttonHelp" Click="onButtonHelpClick" Content="?"  >
             <Button.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5" />
+                    <Setter Property="CornerRadius" Value="15" />
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="buttonChangeParametersList" Click="buttonChangeParametersList_Click" 
-                HorizontalAlignment="Left" Height="80" Width="80" VerticalAlignment="Top"
-                Grid.Column="1" Grid.Row="2" Margin="0,0,0,5" Background="LightGoldenrodYellow">
+        <Button Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4"
+                Width="25" Height="25" Background="LightYellow" Margin="8,0,0,4"
+                FontWeight="Bold"
+                HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                Click="ButtonAdd_ButtonClick">
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="15" />
+                </Style>
+            </Button.Resources>
             <StackPanel Orientation="Vertical">
                 <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\plus-icon.png" />
-                <TextBlock Text="Добавить" Background="Transparent" Margin="0,2,0,0" HorizontalAlignment="Center"/>
-                <TextBlock Text="или удалить" Background="Transparent" />
             </StackPanel>
         </Button>
-
-        <ListView x:Name="listViewParameters" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Height="200">
+        <ListView x:Name="listViewParameters" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" Height="200">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
-                <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Parameter Info">
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Id}" Width="20"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Guid}" Header="GUID" Width="80"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Header="Наименование параметра" Width="200"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=ParameterGroup}" Header="Группа в ФОП" Width="auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=ParameterType}" Header="Тип данных" Width="auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyParameterGroup}" Header="Группа параметров в семействе" Width="auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyParameterType}" Header="Экз./Тип" Width="auto"/>
+                <GridView AllowsColumnReorder="True">
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Header="Наименование параметра" Width="200" />
+
+
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyParameterType}" Header="Экз./Тип" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyParameterGroup}" Header="Группа" Width="100"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=ParameterType}" Header="Тип" Width="100"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Value}" Header="Значение" Width="auto"/>
+                    <GridViewColumn Width="50" Header="Удалить">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button 
+                                    Content="-" FontWeight="DemiBold"
+                                    Click="ButtonFromListView_ButtonClick" 
+                                    Background="Transparent"  
+                                    CommandParameter="{Binding}" 
+                                    HorizontalAlignment="Center"
+                                    Width="20">
+                                    <Button.Resources>
+                                        <Style TargetType="Border">
+                                            <Setter Property="CornerRadius" Value="10" />
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-
-        <TextBlock Text="Семейства" FontSize="16" TextAlignment="Center" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
+        
+        <TextBlock Text="Семейства" FontSize="16" TextAlignment="Center" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="8"/>
 
         <StackPanel Grid.Row="7" Grid.Column="1">
             <Button Width="80" Height="80" Margin="0,0,0,5" Background="LightYellow" HorizontalAlignment="Left" Click="UserFolder_ButtonClick">
                 <StackPanel Orientation="Vertical">
-                    <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\user-icon.png" />
+                    <Image Width="25" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\user-icon.png" />
                     <TextBlock Text="User" Background="Transparent" Margin="0,2,0,0"/>
                 </StackPanel>
             </Button>
             <Button Width="80" Height="80" Margin="0,0,0,5" Background="LightYellow" HorizontalAlignment="Left" Click="NetFolder_ButtonClick">
                 <StackPanel Orientation="Vertical">
-                    <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\net-icon.png" />
+                    <Image Width="25" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\net.png" />
                     <TextBlock Text="М1 Проект" Background="Transparent" Margin="0,2,0,0"/>
                 </StackPanel>
             </Button>
             <Button Width="80" Height="80" Background="LightYellow" HorizontalAlignment="Left" Click="AllFolders_ButtonClick">
                 <StackPanel Orientation="Vertical">
-                    <Image Width="20" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\comp-icon.png" />
+                    <Image Width="25" Source="C:\Users\o.sidorin\source\repos\BatchAddingParameters\BatchAddingParameters\res\comp-icon.png" />
                     <TextBlock Text="Этот" Background="Transparent" TextAlignment="Center" Margin="0,2,0,0"/>
                     <TextBlock Text="компьютер" Background="Transparent" TextAlignment="Center"/>
                 </StackPanel>
@@ -111,31 +139,30 @@
                 </Style>
             </TreeView.Resources>
         </TreeView>
-        <Button Content="Удалить параметры из семейств" FontSize="14" HorizontalAlignment="Left" 
-                Width="250" Height="30"
-                Grid.Column="3" Grid.Row="8" Margin="20,5,0,5" Background="LightGoldenrodYellow">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5" />
-                </Style>
-            </Button.Resources>
-        </Button>
-        <Button Content="Добавить параметры в семейства" FontSize="14" HorizontalAlignment="Right" 
-                Width="250" Height="30"
-                Grid.Column="3" Grid.Row="8" Grid.ColumnSpan="2" Margin="0,5,20,5" Background="LightGoldenrodYellow">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5" />
-                </Style>
-            </Button.Resources>
-        </Button>
-        <TextBlock Text="Отчет" FontSize="16" TextAlignment="Center" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                    Grid.Column="1" Grid.Row="8"  Grid.ColumnSpan="4">
+            <Button Content="Удалить параметры из семейств" FontSize="14" HorizontalAlignment="Left" 
+                Width="300" Height="60"
+                Margin="0,15,0,5" Background="LightGoldenrodYellow">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="0" />
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button Content="Добавить параметры в семейства" FontSize="14" HorizontalAlignment="Right" 
+                    Width="300" Height="60"
+                    Margin="25,15,0,5" Background="LightGoldenrodYellow" Click="ButtonAddParametersInToFamily_Click">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="0" />
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </StackPanel>
+        
+        
 
-        <TextBlock Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4"
-                   Margin="0,5,0,5" Foreground="LightGoldenrodYellow"
-                   Height="50"
-                   Text="Text..">
-        </TextBlock>
 
 
     </Grid>
