--- a/BatchAddingParameters/WindowMain.xaml
+++ b/BatchAddingParameters/WindowMain.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BatchAddingParameters"
              mc:Ignorable="d"
-             Title="Добавление общих параметров в семейства" Height="720" Width="800"
+             Title="Добавление общих параметров в семейства" Height="750" Width="800"
              Background="SteelBlue" FontFamily="Segoe UI Light">
 
     <Grid>
@@ -29,11 +29,12 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Параметры" FontSize="16" TextAlignment="Center" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
+        <TextBlock Text="Параметры для добавления в семейства" FontSize="16" TextAlignment="Center" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="5"/>
         <Button Grid.Column="4" Grid.Row="1" Background="Transparent" Foreground="Snow"  BorderThickness="0"
                 x:Name="buttonHelp" Click="onButtonHelpClick" Content="?"  >
             <Button.Resources>
@@ -65,12 +66,17 @@
             <ListView.View>
                 <GridView AllowsColumnReorder="True">
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Header="Наименование параметра" Width="200" />
-
-
                     <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyParameterType}" Header="Экз./Тип" Width="100"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyParameterGroup}" Header="Группа" Width="100"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ParameterType}" Header="Тип" Width="100"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=FamilyValue}" Header="Значение" Width="180"/>
+                    
+                    <GridViewColumn Width="100" Header="Значение">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBox Text="{Binding Path=FamilyValue}" Background="Transparent" BorderThickness="0"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Width="50" Header="Удалить">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
@@ -94,7 +100,7 @@
             </ListView.View>
         </ListView>
         
-        <TextBlock Text="Семейства" FontSize="16" TextAlignment="Center" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="8"/>
+        <TextBlock Text="Расположение семейств" FontSize="16" TextAlignment="Center" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" Foreground="White" Margin="8"/>
 
         <StackPanel Grid.Row="7" Grid.Column="1">
             <Button Width="80" Height="80" Margin="0,0,0,5" Background="LightYellow" HorizontalAlignment="Left" Click="UserFolder_ButtonClick">
@@ -139,8 +145,11 @@
                 </Style>
             </TreeView.Resources>
         </TreeView>
+        <CheckBox x:Name="subFoldersCheckBox" Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="4"
+                  Content="С подпапками" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="5"
+                  Foreground="LightYellow" VerticalContentAlignment="Center"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
-                    Grid.Column="3" Grid.Row="8"  Grid.ColumnSpan="2">
+                    Grid.Column="3" Grid.Row="9"  Grid.ColumnSpan="2">
             <Button Content="Удалить параметры из семейств" FontSize="14" HorizontalAlignment="Left" 
                 Width="300" Height="60"
                 Margin="0,15,0,5" Background="LightPink" Click="ButtonDeleteParametersFromFamily_Click">
@@ -163,9 +172,9 @@
         <TextBox x:Name="textBlockOutput" TextWrapping="Wrap" AcceptsReturn="True"
                  HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto"
                  Background="Transparent" Foreground="Yellow" BorderThickness="1" BorderBrush="DarkSalmon"
-                 Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="3"
+                 Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="3"
                  Margin="0,10,0,0"/>
-        <Separator Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="3"
+        <Separator Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="4" Grid.RowSpan="3"
                    Background="LightYellow" Width="20"/>
 
     </Grid>
